--- a/github-registry-frontend/static/index.html
+++ b/github-registry-frontend/static/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>ARA Registry - Discover AI Agents & Tools</title>
-    <link rel="stylesheet" href="/styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
     <!-- Header -->
@@ -16,7 +16,7 @@
             <div class="header-content">
                 <h1 class="logo">🎯 ARA Registry</h1>
                 <nav class="nav">
-                    <a href="/" class="nav-link active">Browse</a>
+                    <a href="index.html" class="nav-link active">Browse</a>
                     <a href="https://github.com/aws/ara" class="nav-link" target="_blank">Docs</a>
                     <a href="https://github.com/aws/ara" class="nav-link" target="_blank">GitHub</a>
                 </nav>
@@ -168,6 +168,6 @@
         </div>
     </footer>
 
-    <script src="/app.js?v=2"></script>
+    <script src="app.js?v=2"></script>
 </body>
 </html>
