--- a/github-registry-frontend/static/package.html
+++ b/github-registry-frontend/static/package.html
@@ -7,16 +7,16 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Package Details - ARA Registry</title>
-    <link rel="stylesheet" href="/styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo"><a href="/">🎯 ARA Registry</a></h1>
+                <h1 class="logo"><a href="index.html">🎯 ARA Registry</a></h1>
                 <nav class="nav">
-                    <a href="/" class="nav-link">Browse</a>
+                    <a href="index.html" class="nav-link">Browse</a>
                     <a href="https://github.com/aws/ara" class="nav-link" target="_blank">Docs</a>
                     <a href="https://github.com/aws/ara" class="nav-link" target="_blank">GitHub</a>
                 </nav>
@@ -115,7 +115,7 @@
             
             <div id="errorState" class="error-state" style="display: none;">
                 <p>Package not found</p>
-                <a href="/" class="button">Back to Browse</a>
+                <a href="index.html" class="button">Back to Browse</a>
             </div>
         </div>
     </section>
@@ -127,6 +127,6 @@
         </div>
     </footer>
 
-    <script src="/package.js?v=2"></script>
+    <script src="package.js?v=2"></script>
 </body>
 </html>
