Fix navigation links, add docs page, fix API paths

--- a/github-registry-frontend/static/package.html
+++ b/github-registry-frontend/static/package.html
@@ -14,11 +14,11 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo"><a href="index.html">🎯 ARA Registry</a></h1>
+                <h1 class="logo"><a href="index.html">ARA Registry</a></h1>
                 <nav class="nav">
                     <a href="index.html" class="nav-link">Browse</a>
-                    <a href="https://github.com/aws/ara" class="nav-link" target="_blank">Docs</a>
-                    <a href="https://github.com/aws/ara" class="nav-link" target="_blank">GitHub</a>
+                    <a href="docs.html" class="nav-link">Docs</a>
+                    <a href="https://github.com/2018-lonely-droid/ara-registry-github-starter" class="nav-link" target="_blank">GitHub</a>
                 </nav>
             </div>
         </div>
