--- a/github-registry-frontend/static/index.html
+++ b/github-registry-frontend/static/index.html
@@ -14,11 +14,11 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo">🎯 ARA Registry</h1>
+                <h1 class="logo">ARA Registry</h1>
                 <nav class="nav">
                     <a href="index.html" class="nav-link active">Browse</a>
-                    <a href="https://github.com/aws/ara" class="nav-link" target="_blank">Docs</a>
-                    <a href="https://github.com/aws/ara" class="nav-link" target="_blank">GitHub</a>
+                    <a href="docs.html" class="nav-link">Docs</a>
+                    <a href="https://github.com/2018-lonely-droid/ara-registry-github-starter" class="nav-link" target="_blank">GitHub</a>
                 </nav>
             </div>
         </div>
