--- a/github-registry-frontend/static/docs.html
+++ b/github-registry-frontend/static/docs.html
@@ -42,6 +42,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="docs.js?v=3"></script>
 </body>
 </html>
