WIP: Add new package detail layout and pages structure

--- a/github-registry-frontend/static/index.html
+++ b/github-registry-frontend/static/index.html
@@ -66,18 +66,18 @@
     <section class="stats">
         <div class="container">
             <div class="stats-grid">
-                <div class="stat-card">
+                <a href="packages.html" class="stat-card stat-card-link">
                     <div class="stat-value" id="totalPackages">-</div>
                     <div class="stat-label">Packages</div>
-                </div>
+                </a>
                 <div class="stat-card">
                     <div class="stat-value" id="totalDownloads">-</div>
                     <div class="stat-label">Downloads</div>
                 </div>
-                <div class="stat-card">
+                <a href="namespaces.html" class="stat-card stat-card-link">
                     <div class="stat-value" id="totalNamespaces">-</div>
                     <div class="stat-label">Namespaces</div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
